crates/biome_js_parser/tests/js_test_suite/error/glimmer/glimmer_template_self_closing.gjs
// Test self-closing template tag
// Glimmer templates must have explicit closing tags, not self-closing
const x = <template />;
